Fix command line tests and shorten run time